# cling

./: .gitignore  README.md  TODO.md  pyproject.toml
.github/workflows/: base-ci.yml
cling/: main.py
cling/app/: trainer.py
cling/banks/: git.yaml  questions_git.yaml
cling/res/banks/: docker.yaml  git.yaml  ros2.yaml
cling/res/categories/: developer.yaml
tests/: test_dummy.py
