[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cling-trainer"
version = "0.1.0"
description = "CLI training utility"
authors = [
    {name = "Ivan Maraev", email = "flensim.core@yandex.ru"}
]
readme = "README.md"
dependencies = []

[project.scripts]
cling = "cling.main:main"

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I"]
